results/SVCOMP/specgen/log-ExSymExe15-2024_03_04_13_07_39.txt
class Main {
  static int field;
  static int field2;

  //@ requires arg >= Short.MIN_VALUE && arg <= Short.MAX_VALUE;
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
  //@ ensures !\result ==> field >= 0 && !test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    Main inst = new Main();
    field = arg;
    if (field < 0)
      return true;
    return inst.test(x, field, field2);
  }
  
  //@ requires x >= Integer.MIN_VALUE && x <= Integer.MAX_VALUE;
  //@ requires z >= Integer.MIN_VALUE && z <= Integer.MAX_VALUE;
  //@ requires r >= Integer.MIN_VALUE && r <= Integer.MAX_VALUE;
  //@ ensures \result ==> r <= 99;
  //@ ensures !\result ==> r > 99;
  //@ ensures \result ==> r > 99 ==> x <= z;
  //@ ensures !\result ==> r <= 99 || x > z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
                                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
                                                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: non-static method test(int,int,int) cannot be referenced from a static context
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
                                       ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field >= 0 && !test(13000, field, field2);
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field >= 0 && !test(13000, field, field2);
                                                      ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field >= 0 && !test(13000, field, field2);
                                                             ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:7: error: non-static method test(int,int,int) cannot be referenced from a static context
  //@ ensures !\result ==> field >= 0 && !test(13000, field, field2);
                                          ^
8 errors

class Main {
  static /*@ spec_public @*/ int field;
  static /*@ spec_public @*/ int field2;

  //@ requires arg >= Short.MIN_VALUE && arg <= Short.MAX_VALUE;
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
  //@ ensures !\result ==> field >= 0 && !test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    Main inst = new Main();
    field = arg;
    if (field < 0)
      return true;
    return inst.test(x, field, field2);
  }
  
  //@ requires x >= Integer.MIN_VALUE && x <= Integer.MAX_VALUE;
  //@ requires z >= Integer.MIN_VALUE && z <= Integer.MAX_VALUE;
  //@ requires r >= Integer.MIN_VALUE && r <= Integer.MAX_VALUE;
  //@ ensures \result ==> r <= 99;
  //@ ensures !\result ==> r > 99;
  //@ ensures \result ==> r > 99 ==> x <= z;
  //@ ensures !\result ==> r <= 99 || x > z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: non-static method test(int,int,int) cannot be referenced from a static context
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
                                       ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:7: error: non-static method test(int,int,int) cannot be referenced from a static context
  //@ ensures !\result ==> field >= 0 && !test(13000, field, field2);
                                          ^
2 errors

class Main {
  static /*@ spec_public @*/ int field;
  static /*@ spec_public @*/ int field2;

  //@ requires arg >= Short.MIN_VALUE && arg <= Short.MAX_VALUE;
  //@ ensures \result ==> field < 0 || new Main().test(13000, field, field2);
  //@ ensures !\result ==> field >= 0 && !new Main().test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    Main inst = new Main();
    field = arg;
    if (field < 0)
      return true;
    return inst.test(x, field, field2);
  }
  
  //@ requires x >= Integer.MIN_VALUE && x <= Integer.MAX_VALUE;
  //@ requires z >= Integer.MIN_VALUE && z <= Integer.MAX_VALUE;
  //@ requires r >= Integer.MIN_VALUE && r <= Integer.MAX_VALUE;
  //@ ensures \result ==> r <= 99;
  //@ ensures !\result ==> r > 99;
  //@ ensures \result ==> r > 99 ==> x <= z;
  //@ ensures !\result ==> r <= 99 || x > z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:6: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> field < 0 || new Main().test(13000, field, field2);
                                       ^
/home/max/Documents/JMLGPT/tmp/ExSymExe15.java:7: error: Object allocation is not permitted in specification expressions
  //@ ensures !\result ==> field >= 0 && !new Main().test(13000, field, field2);
                                          ^
2 errors

class Main {
  static /*@ spec_public @*/ int field;
  static /*@ spec_public @*/ int field2;

  //@ requires arg >= Short.MIN_VALUE && arg <= Short.MAX_VALUE;
  //@ ensures \result ==> field < 0 || test(13000, field, field2);
  //@ ensures !\result ==> field >= 0 && !test(13000, field, field2);
  public static boolean f(Short arg) {
    int x = 13000;
    field = arg;
    if (field < 0)
      return true;
    return test(13000, field, field2);
  }
  
  //@ requires x >= Integer.MIN_VALUE && x <= Integer.MAX_VALUE;
  //@ requires z >= Integer.MIN_VALUE && z <= Integer.MAX_VALUE;
  //@ requires r >= Integer.MIN_VALUE && r <= Integer.MAX_VALUE;
  //@ ensures \result ==> r <= 99;
  //@ ensures !\result ==> r > 99;
  //@ ensures \result ==> r > 99 ==> x <= z;
  //@ ensures !\result ==> r <= 99 || x > z;
  public static boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe15");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r <= 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x <= z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
